--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,9 @@ repositories {
 }
 
 dependencies {
+    //compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.2'
     compile group: 'org.postgresql', name: 'postgresql', version: '42.2.1'
-    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.9-rc'
+    //compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.9-rc'
     compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.6.2'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
