--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,34 @@
-/.idea
 config.json
-out/
 PostgreSql.java
+
+*.class
+# Package Files #
+*.jar
+*.war
+*.ear
+
+
+############################################################
+# JetBrains IDEs: IntelliJ
+############################################################
+
+*.iml
+*.ipr
+*.iws
+
+.idea/
+out/
+target/
+
+############################################################
+# Gradle ignore defaults (https://github.com/github/gitignore/blob/master/Gradle.gitignore)
+############################################################
+.gradle
+build/
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+############################################################
+# Project specific ignore rules
+*.log
